# field-ii-python

./: language.py  nohup.out
configs/: ec.032.json  ec.032.lateral.res.json  ec.064.contrast.res.json  ec.064.json  multi_scat.json  rc.0512.json  rc.2048.json
configs/4.fetus/: 1.DAS.json
cpp_method/: CMakeLists.txt
field/: engine_pool.py
simulate/: delay_and_sum_worker.py  linear_array_imaging_worker.py  multi_scat_worker.py
